[gd_scene load_steps=6 format=2]

[ext_resource path="res://UserInterface/TownHud/TownHud.gd" type="Script" id=1]
[ext_resource path="res://UserInterface/TownHud/prefabs/ExpeditionDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://UserInterface/TownHud/prefabs/MapInfoBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UserInterface/fonts/poppins_description_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://UserInterface/fonts/poppins_ui_text.tres" type="DynamicFont" id=5]

[node name="TownHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ExpeditionDialog" parent="." instance=ExtResource( 2 )]
visible = false
margin_right = 320.0
input_pass_on_modal_close_click = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MainView" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 644.0
rect_min_size = Vector2( 0, 644 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox - Main" type="HBoxContainer" parent="VBoxContainer/MainView"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 660 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MBox-MainBox" type="MarginContainer" parent="VBoxContainer/MainView/HBox - Main"]
margin_right = 1008.0
margin_bottom = 660.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="MBox-QueueList" type="MarginContainer" parent="VBoxContainer/MainView/HBox - Main"]
margin_left = 1012.0
margin_right = 1280.0
margin_bottom = 660.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList"]
margin_left = 24.0
margin_top = 24.0
margin_right = 260.0
margin_bottom = 636.0
rect_min_size = Vector2( 236, 612 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MapList" type="VBoxContainer" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList/ScrollContainer"]
unique_name_in_owner = true
margin_right = 236.0
margin_bottom = 80.0
rect_min_size = Vector2( 236, 0 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="MapInfo" parent="VBoxContainer/MainView/HBox - Main/MBox-QueueList/ScrollContainer/MapList" instance=ExtResource( 3 )]

[node name="BottomBar" type="Control" parent="VBoxContainer"]
margin_top = 644.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 76 )
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0196078, 0.0196078, 0.0196078, 0.752941 )

[node name="HBox - Bottom Bar" type="HBoxContainer" parent="VBoxContainer/BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 12

[node name="MBox - ObjectiveInfo" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_right = 320.0
margin_bottom = 76.0
rect_min_size = Vector2( 320, 0 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.0627451 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 60.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 36.0
custom_constants/separation = 16

[node name="BossesGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 28.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BossValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/BossesGroup"]
unique_name_in_owner = true
margin_right = 36.0
margin_bottom = 28.0
rect_min_size = Vector2( 36, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/BossesGroup"]
margin_left = 40.0
margin_right = 90.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = " Bosses"
align = 1
valign = 1
uppercase = true

[node name="LoreGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 181.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LoreValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/LoreGroup"]
unique_name_in_owner = true
margin_right = 35.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/LoreGroup"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = " Lore"
align = 1
valign = 1
uppercase = true

[node name="MapsGroup" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 272.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MapsValue" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/MapsGroup"]
unique_name_in_owner = true
margin_right = 35.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "0/0"
align = 1
valign = 1

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ObjectiveInfo/MarginContainer/HBoxContainer/MapsGroup"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = " Map"
align = 1
valign = 1
uppercase = true

[node name="MBox - ThreatMeter" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_left = 324.0
margin_right = 956.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter"]
margin_left = 16.0
margin_top = 16.0
margin_right = 616.0
margin_bottom = 60.0

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
visible = false
margin_right = 298.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 2

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 122.0
margin_top = 14.0
margin_right = 138.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 154.0
margin_top = 14.0
margin_right = 170.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 186.0
margin_top = 14.0
margin_right = 202.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 218.0
margin_top = 14.0
margin_right = 234.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect5" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 250.0
margin_top = 14.0
margin_right = 266.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect6" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer1"]
margin_left = 282.0
margin_top = 14.0
margin_right = 298.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="EventCoordsLabel" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
unique_name_in_owner = true
margin_right = 600.0
margin_bottom = 44.0
rect_min_size = Vector2( 128, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer"]
visible = false
margin_left = 302.0
margin_right = 600.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="ColorRect1" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_top = 14.0
margin_right = 48.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_top = 14.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect4" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 96.0
margin_top = 14.0
margin_right = 112.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect5" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 128.0
margin_top = 14.0
margin_right = 144.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="ColorRect6" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - ThreatMeter/HBoxContainer/HBoxContainer2"]
margin_left = 160.0
margin_top = 14.0
margin_right = 176.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="MBox - GlobalStats" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 76.0
rect_min_size = Vector2( 320, 0 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.0627451 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 60.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 280.0
margin_bottom = 36.0
custom_constants/separation = 24

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer"]
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Weapon "
align = 1
valign = 1
uppercase = true

[node name="EventCoordsLabel" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = " 8/10 "
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 272.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = " Money"
align = 1
valign = 1
uppercase = true

[node name="EventCoordsLabel2" type="Label" parent="VBoxContainer/BottomBar/HBox - Bottom Bar/MBox - GlobalStats/MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = " $242"
align = 1
valign = 1
